# python-project-50

./: .coverage  .flake8  .gitignore  Makefile  README.md  asciinema_flat_stylish.cast  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  hexlet-check.yml
gendiff/: generate_diff.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
python_project_50.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_flat_yaml.py  test_json.py  test_nested_yaml.py  test_plain_yaml.py
tests/test_data/: json_expected.txt  nested1.yml  nested2.yml  nested_expected.txt  plain1.yml  plain2.yml  plain_expected.txt
