[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Generator - Calculates the difference between two data structures"
authors = ["Varvara <your_email@example.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
ruff = "^0.3.7"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
select = ["E", "F"]
exclude = ["tests/fixtures", ".venv"]